# remindme

./: .gitignore  docker-compose.yml
etc/app/: .env  Dockerfile  entrypoint.sh  pyproject.toml
etc/db/: .env
src/remindme_app/: manage.py
src/remindme_app/remindme_api/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/remindme_app/remindme_api/migrations/: 0001_initial.py  0001_initial_squashed_0004_auto_20200906_0340.py  0001_squashed_0002_auto_20200907_0301.py  0002_auto_20200904_1845.py  0003_remindertask.py  0004_auto_20200906_0340.py
src/remindme_app/remindme_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
