[tool.poetry]
name = "remindme"
version = "1.0.0"
description = ""
authors = ["YuryHrytsuk <yuryhrytsuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.1"
djangorestframework = "3.11.1"
psycopg2-binary = "^2.8.5"
celery = "^4.4.7"
django_celery_results = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
